--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,4 @@
 {
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
       "docset_name": "cognitive-toolkit-docs-python",
@@ -8,9 +6,6 @@
       "build_output_subfolder": "cognitive-toolkit-docs-python",
       "locale": "en-us",
       "monikers": [],
-      "xref_query_tags": [
-        "/python"
-      ],
       "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
@@ -21,7 +16,7 @@
       "build_entry_point": "docs",
       "template_folder": "_themes",
       "customized_template_paths": [
-         "_dependentPackages/uref/content"
+        "_dependentPackages/uref/content"
       ],
       "customized_tasks": {
         "docset_prebuild": [
@@ -32,9 +27,11 @@
     }
   ],
   "notification_subscribers": [],
+  "sync_notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
-  "need_preview_pull_request": false,
+  "need_preview_pull_request": true,
+  "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -43,6 +40,10 @@
       "branch_mapping": {}
     }
   ],
+  "branch_target_mapping": {},
+  "need_generate_pdf_url_template": false,
+  "need_generate_pdf": false,
+  "need_generate_intellisense": false,
   "dependent_packages": [
     {
       "id": "opbuild.templates.uref",
@@ -61,29 +62,46 @@
   ],
   "JoinTOCPlugin": [
     {
-      "TopLevelTOC": "api-docs/cntk-2.4/docs-ref-autogen/toc.yml",
+      "TopLevelTOC": "docs-ref-autogen/2.0/toc.yml",
+      "ConceptualTOC": "docs-ref-conceptual/2.0/toc.yml",
+      "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.0",
+      "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.0"
+    },
+    {
+      "TopLevelTOC": "docs-ref-autogen/2.1/toc.yml",
+      "ConceptualTOC": "docs-ref-conceptual/2.1/toc.yml",
+      "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.1",
+      "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.1"
+    },
+    {
+      "TopLevelTOC": "docs-ref-autogen/2.2/toc.yml",
+      "ConceptualTOC": "docs-ref-conceptual/2.2/toc.yml",
+      "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.2",
+      "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.2"
+    },
+    {
+      "TopLevelTOC": "docs-ref-autogen/2.3/toc.yml",
+      "ConceptualTOC": "docs-ref-conceptual/2.3/toc.yml",
+      "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.3",
+      "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.3"
+    },
+    {
+      "TopLevelTOC": "docs-ref-autogen/2.4/toc.yml",
       "ConceptualTOC": "docs-ref-conceptual/2.4/toc.yml",
       "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.4",
       "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.4"
     },
     {
-      "TopLevelTOC": "api-docs/cntk-2.5/docs-ref-autogen/toc.yml",
+      "TopLevelTOC": "docs-ref-autogen/2.5/toc.yml",
       "ConceptualTOC": "docs-ref-conceptual/2.5/toc.yml",
       "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.5",
       "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.5"
     },
     {
-      "TopLevelTOC": "api-docs/cntk-2.5.1/docs-ref-autogen/toc.yml",
+      "TopLevelTOC": "docs-ref-autogen/2.5.1/toc.yml",
       "ConceptualTOC": "docs-ref-conceptual/2.5.1/toc.yml",
       "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.5.1",
       "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.5.1"
-    },
-    {
-      "TopLevelTOC": "api-docs/cntk-2.6/docs-ref-autogen/toc.yml",
-      "ConceptualTOC": "docs-ref-conceptual/2.6/toc.yml",
-      "ReferenceTOCUrl": "/python/api/cognitive-toolkit/toc.json?view=cntk-py-2.6",
-      "ConceptualTOCUrl": "/python/cognitive-toolkit/toc.json?view=cntk-py-2.6"
     }
-  ],
-  "need_generate_pdf_url_template": false
+  ]
 }
