Initialize open publishing repository: https://github.com/OPS-E2E-Prod/cognitive-toolkit-docs-python of branch live

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -24,6 +24,22 @@
         ]
       },
       "version": 0
+    },
+    {
+      "docset_name": "cognitive-toolkit-docs-python-prod",
+      "build_source_folder": "cognitive-toolkit-docs-python-prod",
+      "build_output_subfolder": "cognitive-toolkit-docs-python-prod",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [],
